--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,1 +1,17 @@
 //
+.carte {
+    background-color: rgb(24, 132, 245);
+    color: #fff;
+    border-radius: 10px;
+    padding: 10px;
+
+    p {
+        font-size: 15px;
+
+        span {
+            font-weight: bold;
+            font-size: 17px;
+        }
+    }
+
+}
